deps/v8/test/message/fail/formal-parameters-trailing-comma.out
*%(basename)s:5: SyntaxError: Unexpected token ','
function foo(b, a, a,,) { return a }
                     ^
SyntaxError: Unexpected token ','
